# ROS_Remote25

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/remote2025_camera/share/remote2025_camera/: package.bash  package.zsh
install/remote2025_messages/include/remote2025_messages/remote2025_messages/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/remote2025_messages/include/remote2025_messages/remote2025_messages/msg/detail/: read_led__builder.hpp  read_led__rosidl_typesupport_fastrtps_c.h  read_led__rosidl_typesupport_fastrtps_cpp.hpp  read_led__rosidl_typesupport_introspection_c.h  read_led__struct.h  read_led__traits.hpp  read_led__type_support.c  read_led__type_support.cpp  read_led__type_support.h  read_led__type_support.hpp
install/remote2025_messages/local/lib/python3.10/dist-packages/remote2025_messages/: _remote2025_messages_s.ep.rosidl_typesupport_fastrtps_c.c
install/remote2025_messages/local/lib/python3.10/dist-packages/remote2025_messages-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/remote2025_messages/local/lib/python3.10/dist-packages/remote2025_messages/msg/: _read_led_s.c
install/remote2025_messages/share/remote2025_messages/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/remote2025_messages/share/remote2025_messages/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  detect_messages__rosidl_typesupport_cppExport-noconfig.cmake  detect_messages__rosidl_typesupport_cppExport.cmake  detect_messages__rosidl_typesupport_introspection_cExport.cmake  detect_messages__rosidl_typesupport_introspection_cppExport.cmake  export_detect_messages__rosidl_generator_cExport-noconfig.cmake  export_detect_messages__rosidl_generator_cExport.cmake  export_detect_messages__rosidl_generator_cppExport.cmake  export_detect_messages__rosidl_generator_pyExport.cmake  export_detect_messages__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake
install/remote2025_messages/share/remote2025_messages/msg/: ReadLed.idl
log/: latest_build
src/remote2025_camera/: CMakeLists.txt  package.xml
src/remote2025_camera/include/: calibration.yaml  led.yaml  setting.py  threshold.py
src/remote2025_camera/include/openvino_model/: best.xml  best.yaml  yolov5s.xml
src/remote2025_camera/src/: detection.cpp  readCamera.cpp
src/remote2025_messages/: CMakeLists.txt  package.xml
src/remote2025_reactor/: CMakeLists.txt  package.xml
src/remote2025_reactor/src/: reactor.cpp
testing/: reactor_server.py  robot.py
